# fed_attack

./: .gitignore  README.md  pyproject.toml
fed_attack/: __init__.py  attack.py  client_app.py  model.py  quality_mesure.py  server_app.py  task.py
fed_attack/model/: net_model.pt
scripts/: start_simulation.sh
