[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fed-attack"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "TrungNhan"

[tool.flwr.app.components]
serverapp = "fed_attack.server_app:app"
clientapp = "fed_attack.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 20
fraction-fit = 0.8
local-epochs = 5

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.25